<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym_labo4.BleActivity">

    <ScrollView
        android:id="@+id/ble_operation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TODO vous placerez dans ce layout toutes les vues nécessaire aux intéractions avec le périphérique BLE -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/ble_device_title"
                />

            <TextView
                android:id="@+id/ble_temperature_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:id="@+id/ble_time_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:id="@+id/ble_click_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />


            <Button
                android:id="@+id/ble_temperature_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ble_temperature_button" />

            <Button
                android:id="@+id/ble_send_int"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ble_send_button" />

            <Button
                android:id="@+id/ble_set_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ble_set_time_button" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ble_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/ble_scanresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/ble_scanresults_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/ble_empty" />

    </RelativeLayout>

</RelativeLayout>
